--- a/app/src/main/res/layout/activity_document_enroll.xml
+++ b/app/src/main/res/layout/activity_document_enroll.xml
@@ -16,88 +16,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="381dp"
-        android:layout_height="24dp"
-        android:text="@string/account_header"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintBottom_toTopOf="@+id/editTextUserName" />
-
-    <EditText
-        android:id="@+id/editTextUserName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/hint_user_name"
-        android:inputType="textEmailAddress"
-        android:minHeight="48dp"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
-        />
-
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/hint_password"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
-        app:layout_constraintBottom_toTopOf="@+id/editTextEnrollmentId"
-        />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_marginTop="24dp"
-        android:layout_width="381dp"
-        android:layout_height="24dp"
-        android:text="@string/enrollment_token_header"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-        app:layout_constraintBottom_toTopOf="@+id/editTextEnrollmentId" />
-
-    <EditText
-        android:layout_marginTop="24dp"
-        android:id="@+id/editTextEnrollmentId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/hint_enrollment_token"
-        android:inputType="textShortMessage"
-        android:minHeight="48dp"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-        app:layout_constraintBottom_toTopOf="@+id/editTextDocumentId"
-        />
-
-    <TextView
         android:id="@+id/textView4"
-        android:layout_marginTop="24dp"
         android:layout_width="381dp"
         android:layout_height="24dp"
+        android:layout_marginTop="0dp"
         android:text="@string/mrz_header"
         android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/editTextDocumentId"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@+id/editTextEnrollmentId"
-        app:layout_constraintBottom_toTopOf="@+id/editTextDocumentId" />
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:layout_marginTop="24dp"
@@ -112,7 +41,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintTop_toBottomOf="@+id/editTextEnrollmentId"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintBottom_toTopOf="@id/editTextDob"
         />
 
@@ -158,7 +87,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDocDoe"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
         app:layout_constraintBottom_toTopOf="@id/buttonEnroll"
         />
 
