--- a/app/src/main/res/layout/activity_list_messages.xml
+++ b/app/src/main/res/layout/activity_list_messages.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MessagesListActivity">
+    tools:context=".activities.MessagesListActivity">
 
     <TextView
         android:id="@+id/textView7"
