--- a/app/src/main/res/layout/activity_scan_token.xml
+++ b/app/src/main/res/layout/activity_scan_token.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScanApiTokenActivity">
+    tools:context=".activities.ScanApiTokenActivity">
 
     <TextView
         android:id="@+id/textView"
