--- a/app/src/main/res/layout/activity_show_message.xml
+++ b/app/src/main/res/layout/activity_show_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowMessageActivity">
+    tools:context=".activities.ShowMessageActivity">
 
     <TextView
         android:id="@+id/from_header"
