--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,8 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_link_to_server"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Link to server"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_enrol_mrtd"
+        android:orderInCategory="100"
+        android:title="Enrol MRTD"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_show_message_list"
+        android:orderInCategory="100"
+        android:title="Messages"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_reset_data"
+        android:orderInCategory="100"
+        android:title="Reset"
         app:showAsAction="never" />
 </menu>
